--- a/src/app/listproduct/listproduct.component.html
+++ b/src/app/listproduct/listproduct.component.html
@@ -1,19 +1,41 @@
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Photo</th>
-        <th>Nom</th>
-        <th>Prix</th>
-        <th>Quantute</th>
-        <th>Categorie</th>
-    </tr>
-    <tr *ngFor="let p of products">
-        <td>{{p.id}}</td>
-        <td><img src="http://localhost:8085/restapiproduit/getImage/{{p.id}}" height="50px" width="50px" alt="test"></td>
-        <td>{{p.nom}}</td>
-        <td>{{p.prix}}</td>
-        <td>{{p.quantite}}</td>
-        <td>{{p.categorie}}</td>
-    </tr>
-
+<div class="form-group row">
+  <label for="mot" class="col-sm-2 col-form-label">Mot Clé</label>
+  <div class="col-sm-10">
+    <input
+      type="text"
+      [(ngModel)]="y"
+      class="form-control"
+      id="mot"
+      placeholder="Password"
+    />
+  </div>
+</div>
+<br />
+<br />
+<table class="table">
+  <tr>
+    <th>id</th>
+    <th>photo</th>
+    <th>nom</th>
+    <th>prix</th>
+    <th>quantite</th>
+    <th>categorie</th>
+  </tr>
+  <tr *ngFor="let p of productsRes">
+    <td>{{ p.id }}</td>
+    <td>
+      <img
+        src="http://localhost:8085/restapiproduit/getImage/{{ p.id }}"
+        height="50px"
+        width="50px"
+        alt="test"
+      />
+    </td>
+    <td>
+      <a routerLink="/list/{{ p.id }}">{{ p.nom }}</a>
+    </td>
+    <td>{{ p.prix }}</td>
+    <td>{{ p.quantite }}</td>
+    <td>{{ p.categorie }}</td>
+  </tr>
 </table>
